# xtts-v2-ai-voice

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  tts_engine.py
samples/: README.md
src/xtts_voice/: api.py  cli.py  exceptions.py  settings.py  tts_engine.py  worker.py
src/xtts_voice/api/: app.py
src/xtts_voice/core/: engine.py
src/xtts_voice/utils/: cache.py
tests/: test_tts.py
