[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xtts-voice"
version = "0.1.0"
description = "Profesyonel XTTS-v2 TTS ve Voice Cloning aracı"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "OpenMind Agent", email = "openmind@example.com"}]
dependencies = [
    "TTS==0.22.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
    "aiofiles>=23.1.0",
    "celery>=5.3.0",
    "prometheus-client>=0.17.0",
    "pytest>=7.0.0"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
xtts-voice = "xtts_voice.cli:main"

[tool.black]
line-length = 88

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.pylint]
max-line-length = 88
